- [ADD] is an addition of a new feature
- [FIX] is a bug fix
- [MAINT] is a maintenance change for general improvement and proactive avoidance of potential issues

WARNING: Until version `1.0.0` there is a greater possibility of breaking changes.

== `0.x` changes

=== `0.2.9` (in progress)

- [FIX] In HTTP server spans, ensure values of multiple request headers with same name are captured as an array.
Also, do not normalize `-` to `_` in header names.
- [FIX] More robust processing of potentially incomplete Ring request maps to extract server span attributes.
- [FIX] To ensure HTTP/2 compatibility, read server name and port from Ring request map rather than `Host` header, which is supported in HTTP/1.1 only.
- [FIX] Pass HTTP route data to the instrumentation agent when present.
This ensures measurements captured by the agent for HTTP server span metrics have the `http.route` attribute.
- [FIX] Ensure provided interceptors correctly set attributes for manually created HTTP server span metrics.
- [FIX] Do not include app-root in server span names.
- [ADD] By default, populate `code.function.name` attribute to name of function containing the start of each span.
This is implemented using the StackWalker API for performance reasons, starting in Java 9.
If StackWalker is not available, the attribute is not populated.
- [ADD] Updated `span/new-span!` to provide defaults for source location, similar to other functions and macros that
create spans. Note: `new-span!` is now a macro.
- [ADD] New middleware `span/wrap-span` and `span/wrap-bound-span` to create a span around subsequent processing.
These can be used as an alternative to the deprecated `wrap-exception-event` to record uncaught exceptions before they are transformed.
- [ADD] New example `word-stream-app` that demonstrates manual instrumentation of a `core.async.flow` application.